--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ jsbeautifier==1.14.7
 mccabe==0.7.0
 mypy-extensions==0.4.3
 pathspec==0.10.3
+Pillow==9.4.0
 platformdirs==2.6.2
 pycodestyle==2.10.0
 pyflakes==3.0.1
